TaskList: Streamline task formatting
Use stream collectors to format task lists and saved task records.
This avoids repeated string concatenation and prevents an unwanted leading
line separator in the save file.

Simplify task filtering with Stream.toList() and clarify its documentation.